Update find bar, disabled icon, and download shelf colors for Refresh.

This patch makes the following changes:
* Disabled vector icon buttons now use kDisabledControlAlpha to derive
  their color (was a hardcoded value).
* Find bar text are icons are now Grey 900 (was black). The secondary
  match label is now Grey 700 (was much lighter) which brings it above
  a11y minimums.
* Download shelf text and bookmark bar text is now Grey 800 (was Grey
  700). This results in the download status text and icons being non-
  spec colors, though they are now darker and thus should also meet
  a11y minimums.

Screenshots are available in the associated bugs.

This patch also refactors the download shelf logic intended to update
colors when the View is added to a Widget into AddedToWidget instead
of ViewHierarchyChanged, so that it will only run once.

Bug: 872817, 870539
Change-Id: I4a402a78c48be3cbb9310411f49e80f01d45451a
Reviewed-on: https://chromium-review.googlesource.com/c/1255891
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598108}
Former-commit-id: 02dec75001f49d7ccfadce1f30602414a3d248d6